[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wad2obj"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "omgifol>=0.4.0",
    "Pillow>=10.0.0",
]

[tool.setuptools]
py-modules = ["wad2obj"]

[project.scripts]
wad2obj = "wad2obj:main"
